# H-Bot-The-Tiny-Humanoid

./: .gitignore  README.md  index.html  requirements.txt  train.ipynb
h_bot_description/: CMakeLists.txt  package.xml
h_bot_description/config/: joint_mapping.yaml
h_bot_description/urdf/: h_bot.urdf
h_bot_hardware/: CMakeLists.txt  package.xml
h_bot_hardware/launch/: hardware_bringup.launch
h_bot_hardware/scripts/: hardware_bridge.py  mock_hardware.py  web_bridge.py
